--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
   <version>1.5.8.RELEASE</version>
 </parent>
 
+
+
 <properties>
   <java.version>1.8</java.version>
 </properties>
@@ -84,12 +86,23 @@
   </dependencies>
 
 <build>
-  <plugins>
-    <plugin>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-maven-plugin</artifactId>
-    </plugin>
-  </plugins>
+  <resources>
+    <resource>
+      <directory>src/main/resources</directory>
+      <filtering>true</filtering>
+    </resource>
+    <!--<resource>-->
+    <!--<directory>src/main/config</directory>-->
+    <!--</resource>-->
+  </resources>
+
+  <!--<plugins>-->
+    <!--<plugin>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+    <!--</plugin>-->
+  <!--</plugins>-->
 </build>
+
 
 </project>
