--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
 <properties>
   <java.version>1.8</java.version>
+  <MESSAGE>maven message</MESSAGE>
 </properties>
 
   <dependencies>
@@ -90,6 +91,10 @@
     <resource>
       <directory>src/main/resources</directory>
       <filtering>true</filtering>
+      <includes>
+        <include>**/**</include>
+        <!--<include>**/*.rtf</include>-->
+      </includes>
     </resource>
     <!--<resource>-->
     <!--<directory>src/main/config</directory>-->
